--- a/style.css
+++ b/style.css
@@ -1,9 +1,34 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     font-weight: normal;
     background: #f1f1f1;
     color: #0f141e
+}
+
+h1, h2, h3, p {
+    margin-bottom: 20px;
+}
+
+ol {
+    padding-left: 20px;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.avatar {
+    margin-bottom: 20px;
+    border-radius: 20px;
+    box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.25);
 }
 
 .info-text p {
@@ -13,7 +38,8 @@ body {
 }
 
 .card {
-    padding: 10px;
+    margin-bottom: 20px;
+    padding: 20px;
     border-radius: 20px;
 }
 
