--- a/style.css
+++ b/style.css
@@ -5,11 +5,30 @@
 }
 
 body {
+    padding-top: 20px;
+    padding-bottom: 20px;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     font-weight: normal;
     background: #f1f1f1;
     color: #0f141e
+}
+
+a {
+    color: #000;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+a:active {
+    color: blue;
+}
+
+a:visited {
+    color: grey;
 }
 
 h1, h2, h3, p {
@@ -23,18 +42,34 @@ ol {
 .container {
     max-width: 1200px;
     margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .avatar {
-    margin-bottom: 20px;
-    border-radius: 20px;
+    width: 200px;
+    border-radius: 28px;
     box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.25);
+}
+
+.info {
+    margin-bottom: 20px;
+    display: flex;
+}
+
+.info-text {
+    margin-left: 40px;
 }
 
 .info-text p {
     font-style: italic;
     font-weight: bold;
     color: #86898f;
+    margin: 0;
+}
+
+.info-text h4 {
+    margin-bottom: 10px;
 }
 
 .card {
@@ -53,4 +88,83 @@ ol {
 
 .bg-green {
     background: #e5ffe7;
+}
+
+.btn {
+    margin-top: 15px;
+    background: #111;
+    padding: 15px 20px;
+    color: white;
+    border: none;
+    font-family: inherit;
+    cursor: pointer;
+}
+
+.btn:hover {
+    opacity: 0.8;
+}
+
+table {
+    width: 100%;
+}
+
+table tr td, table tr th {
+    padding: 5px;
+    text-align-last: left;
+}
+
+.form h2 {
+    text-align: center;
+}
+
+.form-row {
+    margin-bottom: 10px;
+    display: flex;
+}
+
+.form-row .form-group {
+    /* display: inline-block; */
+    margin-right: 20px;
+    width: 50%;
+    /* width: calc(50% - 20px); */
+}
+
+.form-row .form-group:last-child {
+    margin-right: 0;
+}
+
+.form-group label {
+    display: block;
+    font-size: 14px;
+    color: #86898f;
+}
+
+.form-group input,
+.form-group textarea {
+    width: 100%;
+    border: none;
+    background: transparent;
+    border-bottom: 1px solid #ccc;
+    color: #000;
+    padding: 15px 0 10px;
+    outline: none;
+    font-family: inherit;
+}
+
+@media (max-width: 576px) {
+    .info {
+        display: block;
+        text-align: center;
+    }
+    .info-text {
+        margin-left: 0;
+    }
+    .form-row {
+        display: block;
+    }
+    .form-row .form-group {
+        width: 100%;
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
 }
